--- a/android-app/app/src/main/res/layout/fragment_events.xml
+++ b/android-app/app/src/main/res/layout/fragment_events.xml
@@ -26,12 +26,15 @@
         android:layout_marginBottom="64dp"
         android:text="@string/events"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+        android:textAppearance="@style/TextAppearance.App.Title" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/events_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:nestedScrollingEnabled="false"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_event" />
 
 </LinearLayout>
