--- a/android-app/app/src/main/res/values/themes.xml
+++ b/android-app/app/src/main/res/values/themes.xml
@@ -28,4 +28,8 @@
         <item name="android:textColor">@color/text_primary</item>
     </style>
 
+    <style name="TextAppearance.App.Title" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
