--- a/android-app/app/src/main/res/values/themes.xml
+++ b/android-app/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
         <item name="materialCardViewStyle">@style/Widget.App.Card</item>
+        <item name="appBarLayoutStyle">@style/Widget.App.AppBarLayout</item>
     </style>
 
     <style name="Widget.App.Card" parent="Widget.MaterialComponents.CardView">
@@ -26,6 +27,10 @@
     <style name="Widget.App.BottomNavText" parent="TextAppearance.MaterialComponents.Caption">
         <item name="android:textAlignment">center</item>
         <item name="android:textColor">@color/text_primary</item>
+    </style>
+
+    <style name="Widget.App.AppBarLayout" parent="Widget.MaterialComponents.AppBarLayout.Surface">
+        <item name="elevation">0dp</item>
     </style>
 
     <style name="TextAppearance.App.Title" parent="TextAppearance.MaterialComponents.Subtitle1">
