--- a/ionic-app/src/app/tabs/tabs.page.html
+++ b/ionic-app/src/app/tabs/tabs.page.html
@@ -1,19 +1,20 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+  <ion-tab-bar slot="bottom" color="primary">
+    <ion-tab-button tab="events">
+      <ion-label>wydarzenia</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="messages">
+      <ion-label>komunikaty</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="department">
+      <ion-label>wydział</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="25-years">
+      <ion-label>25 lat</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
