ionic-app: material typography

--- a/ionic-app/src/app/events/event-item/event-item.component.html
+++ b/ionic-app/src/app/events/event-item/event-item.component.html
@@ -3,8 +3,8 @@
   <ion-img [src]="event.imageUrl"></ion-img>
 
   <ion-card-header>
-    <ion-card-title>{{event.name}}</ion-card-title>
-    <ion-card-subtitle>{{event.date}}</ion-card-subtitle>
+    <ion-card-title class="app-text-title">{{event.name}}</ion-card-title>
+    <ion-card-subtitle class="app-text-caption">{{event.date}}</ion-card-subtitle>
   </ion-card-header>
 
 </ion-card>
