--- a/ionic-app/src/app/events/events.page.html
+++ b/ionic-app/src/app/events/events.page.html
@@ -2,11 +2,11 @@
   <ion-list>
 
     <ion-text color="dark" class="ion-text-center">
-      <h1 id="page-header">25 lecie<br>Wydziału Grafiki<br>i Sztuki Mediów</h1>
+      <h1 id="page-header" class="app-text-header">25 lecie<br>Wydziału Grafiki<br>i Sztuki Mediów</h1>
     </ion-text>
 
     <ion-toolbar class="ion-text-center">
-      <ion-title>
+      <ion-title class="app-text-title">
         Wydarzenia
       </ion-title>
     </ion-toolbar>
