--- a/ionic-app/src/app/events/events.page.scss
+++ b/ionic-app/src/app/events/events.page.scss
@@ -1,8 +1,20 @@
 #page-header {
-  padding-top: 82px;
-  padding-bottom: 82px;
+  padding-top: 156px;
+  padding-bottom: 100px;
 }
 
-#page-title {
+#toolbar {
+  position: sticky;
+  top: 0;
+}
 
+#menu-button {
+  position: fixed;
+  top: 5px;
+  right: 0;
+  color: var(--ion-color-primary-contrast);
+}
+
+.first-event {
+  padding-top: 48px;
 }
