ionic-app: basic implementation for other pages

--- a/ionic-app/src/app/tabs/tabs.page.html
+++ b/ionic-app/src/app/tabs/tabs.page.html
@@ -13,7 +13,7 @@
       <ion-label>wydział</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="25-years">
+    <ion-tab-button tab="timeline">
       <ion-label>25 lat</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
