--- a/ionic-app/src/global.scss
+++ b/ionic-app/src/global.scss
@@ -25,6 +25,10 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+.app-flat-header {
+  box-shadow: unset;
+}
+
 .app-text-header {
   font-family: "Roboto Light", sans-serif;
   font-weight: normal;
