ui-tester: final test version

--- a/ionic-app/src/app/events/events.page.html
+++ b/ionic-app/src/app/events/events.page.html
@@ -1,4 +1,6 @@
-<ion-content #content>
+<ion-header></ion-header>
+
+<ion-content [fullscreen]="true" #content>
   <ion-list>
 
     <ion-text color="dark" class="ion-text-center">
