--- a/ionic-app/src/app/events/gallery-tem/gallery-tem.component.scss
+++ b/ionic-app/src/app/events/gallery-tem/gallery-tem.component.scss
@@ -1,5 +1,6 @@
 ion-card {
-  height: 100%;
+  width: 168px;
+  height: 224px;
   box-shadow: unset;
   border: 2px solid var(--ion-color-primary-shade);
   margin: 0;
@@ -9,5 +10,5 @@ ion-card {
 ion-img {
   height: 100%;
   background-color: var(--ion-color-primary);
-  aspect-ratio: 3 / 4;
+  width: 100%;
 }
